Next version
  - Add dosbox.conf option, disabled by default, where if the MCB memory
    chain is corrupted anywhere past the running program's memory block,
    and it does anything to cause allocation, a new free memory block is
    created to satisfy allocations instead of halting emulation. Some DOS
    programs are a bit sloppy in a way that can corrupt the MCB chain.
    When enabled, this behavior matches apparent MS-DOS behavior (joncampbell123).
  - Debugger: DOS MCBS command now also prints the segment immediately
    following the last MCB block (joncampbell123).
  - Tseng ET3000/ET4000: Update Status register 3DAh behavior when emulating
    Tseng chipsets to reflect Tseng datasheet, and VGAKIT SVGA detection code
    expectations. Bit 7 is expected, as documented by Tseng, to be the inverse
    of bit 3 (vertical retrace). Extended Start Register CRTC 33h must not
    allow setting the upper 4 bits because Tseng only documents the bottom
    four, and because VGAKIT requires it for Tseng detection (joncampbell123).
  - Fix bug that, for machine=hercules, prevented Hercules palette shortcut
    from changing colors when in graphics mode (joncampbell123).
  - Remove mixer and VGA capture test modes from integration device. Update
    integration device version number. Convert hardcoded magic constants used
    in IG into constants in iglib.h which is now shared explicitly with the
    iglib.h in DOSLIB. Add integration device interface to allow the guest
    to read and set the CPU cycle count of the emulator. (joncampbell123).
  - Fix INT 10h AH=0Eh bug where printing BEL triggered screen scroll up if
    cursor beyond the last line. Fix for the Elder Scrolls Arena installer.
    (joncampbell123).
  - FAT filesystem driver (for disk images): If Elder Scrolls Arena calls
    INT 21h to find files named *.65 (such as STATES.65) with an attribute mask
    of 0xA (VOLUME LABEL | HIDDEN), ignore the VOLUME LABEL bit and scan